# qgis-mcp

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LEIA_ESTE_PRIMEIRO.md  README.md  iniciar_servidor_mcp.bat  instalar_windows.bat  install.py  pyproject.toml
.github/workflows/: release.yml
benchmarks/: bench_mcp_server.py  bench_socket_client.py
qgis_mcp_plugin/: __init__.py  compat.py  metadata.txt  plugin.py  qgis_mcp_plugin.py
src/qgis_mcp/: client.py  compound_tools.py  helpers.py  qgis_mcp_server.py  server.py
tests/: conftest.py  test_mcp_tools.py  test_qgis_live.py  test_stress.py  test_tdd.py
